revise course create
